[gd_scene load_steps=5 format=3 uid="uid://bktmk76u7dsu0"]

[ext_resource type="Script" uid="uid://beukt3a23d5ug" path="res://src/ui_parts/root_element_editor.gd" id="1_xgyg0"]
[ext_resource type="FontFile" uid="uid://depydd16jq777" path="res://assets/fonts/FontMono.ttf" id="2_fm5sa"]
[ext_resource type="PackedScene" uid="uid://dad7fkhmsooc6" path="res://src/ui_widgets/number_edit.tscn" id="3_1gu7n"]
[ext_resource type="Script" uid="uid://ynx3s1jc6bwq" path="res://src/ui_widgets/BetterToggleButton.gd" id="4_7r848"]

[node name="RootElementEditor" type="VBoxContainer"]
offset_right = 452.0
offset_bottom = 56.0
script = ExtResource("1_xgyg0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Edits" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Size" type="HBoxContainer" parent="CenterContainer/Edits"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Width" type="VBoxContainer" parent="CenterContainer/Edits/Size"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="WidthButton" type="Button" parent="CenterContainer/Edits/Size/Width"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"TextButton"
theme_override_fonts/font = ExtResource("2_fm5sa")
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "width"
script = ExtResource("4_7r848")
hover_pressed_font_color = Color(1, 1, 1, 0.4)

[node name="WidthEdit" parent="CenterContainer/Edits/Size/Width" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2
allow_lower = false

[node name="Height" type="VBoxContainer" parent="CenterContainer/Edits/Size"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeightButton" type="Button" parent="CenterContainer/Edits/Size/Height"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"TextButton"
theme_override_fonts/font = ExtResource("2_fm5sa")
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "height"
script = ExtResource("4_7r848")
hover_pressed_font_color = Color(1, 1, 1, 0.4)

[node name="HeightEdit" parent="CenterContainer/Edits/Size/Height" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2
allow_lower = false

[node name="Viewbox" type="VBoxContainer" parent="CenterContainer/Edits"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="ViewboxButton" type="Button" parent="CenterContainer/Edits/Viewbox"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"TextButton"
theme_override_fonts/font = ExtResource("2_fm5sa")
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "viewBox"
script = ExtResource("4_7r848")
hover_pressed_font_color = Color(1, 1, 1, 0.4)

[node name="Rect" type="HBoxContainer" parent="CenterContainer/Edits/Viewbox"]
layout_mode = 2

[node name="ViewboxEditX" parent="CenterContainer/Edits/Viewbox/Rect" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2

[node name="ViewboxEditY" parent="CenterContainer/Edits/Viewbox/Rect" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2

[node name="ViewboxEditW" parent="CenterContainer/Edits/Viewbox/Rect" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2
allow_lower = false

[node name="ViewboxEditH" parent="CenterContainer/Edits/Viewbox/Rect" instance=ExtResource("3_1gu7n")]
custom_minimum_size = Vector2(48, 22)
layout_mode = 2
allow_lower = false
